Tue Feb 17 23:02:58 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Fix for #119722, reported by Olexiy Avramchenko, patch by Owen
	Taylor.

	* gdk/x11/gdkprivate-x11.h (struct _GdkGCX11): Add a depth field

	* gdk/x11/gdkgc-x11.c (_gdk_x11_gc_new): Keep track of the GC's
	depth.

	* gdk/x11/gdkgc-x11.c (_gdk_gc_x11_get_fg_xft_color): First query
	the colormap, if no colormap, special case depth 1, 

	* gdk/x11/gdkgc-x11.c (_gdk_x11_gc_get_fg_picture): Use
	_gdk_gc_x11_get_fg_xft_color() to get the foreground color.

	* gdk/x11/gdkdrawable-x11.c (gdk_x11_drawable_get_xft_draw):
	Special-case bitmaps without a colormap.

	* gdk/x11/gdkdrawable-x11.c (gdk_x11_draw_pixbuf): Use inherited
	draw_pixbuf() implementation in the bitmap case.

2004-02-17  Mark McLoughlin  <mark@skynet.ie>

	* modules/input/Makefile.am: only reference input method
	modules we've actually built. Fixes re-build failure with
	stale hangul module lying aroung. Bug #134518.

Mon Feb 16 19:13:21 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdraw.c: Revert last commit, please don't commit patches
	without approval, this isn't the right way to do it.

2004-02-16  DindinX  <david@dindinx.org>

	* gdk/gdkdraw.c (gdk_draw_segments): don't try to draw more than 32767
	segments at a time, since XDrawSegments cannot handle more than this.

	fixes bug #122026.
	
Mon Feb 16 18:26:39 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (gtk_toolbar_set_child_property): Call
	gtk_tool_item_set_expand(), not gtk_tool_item_set_homogeneous()
	in the CHILD_PROP_EXPAND branch. (#134543, Damon Chaplin)

Mon Feb 16 00:04:46 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_*): 
	Split declaration and assignment of combo_box.
	
	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Remove a 
	pointless cast

Sun Feb 15 22:08:53 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkoptionmenu.c (gtk_option_menu_get_history): Add 